--- a/сайт/index.html
+++ b/сайт/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
-    <title>визитка</title>
+    <title>Мой сайт визитка</title>
   </head>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="manifest" href="favicon_io/site.webmanifest">
   <body>
     <header class="header">
      <div>
