--- a/сайт/index.html
+++ b/сайт/index.html
@@ -41,7 +41,7 @@
       </section>
       <section class="links">
         <h2 class="links__header" >
-         Привет! Я занимаюсь тестированием и, возможно, буду тестировать ваш продукт. Если вашей команде нужен классный тестировщик, то вы его нашли!</h2>
+         Привет! Я занимаюсь тестированием и, возможно, буду тестировать ваш продукт. Если вашей команде нужен классный тестировщик, то вы его нашли!)))</h2>
       </section>
     </main>
     <footer>
